# py-EduSchedule

./: .gitignore  LICENSE  alembic.ini  eduschedule.db  pyproject.toml
alembic/: env.py
alembic/versions/: 44ae8f802d44_added_unavailabilities.py  66ae1c128d9d_initial_schema.py  9dfce091da6f_add_schedules_table.py  cbdff1c94a27_schema_fixes.py  e621bda9069e_initial_schema.py
scripts/: inspect_db.py  list_employees.py  list_roles.py
src/eduschedule/: config.py
src/eduschedule/adapters/sql/: base.py  engine.py  mappers.py
src/eduschedule/adapters/sql/models/: __init__.py  employee.py  schedule.py  unavailability.py
src/eduschedule/adapters/sql/repositories/: employees.py  schedules.py  unavailabilities.py
src/eduschedule/cli/: main.py
src/eduschedule/domain/: employee.py  schedule.py  scheduler.py  unavailability.py
tests/: cli_test.py  conftest.py  employee_repo_test.py  import_employees_cli_test.py  migration_test.py  schedule_repo_test.py  scheduler_algorithm_test.py  test_parse_roles_cli.py  unavailability_repo_test.py  workflow_test.py
