[project]
name = "eduschedule"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "SQLAlchemy>=2.0",
  "alembic>=1.13",
  "typer>=0.12",
  "rich>=13",
  "pydantic>=2.7",
]

[project.optional-dependencies]
api = ["fastapi>=0.115", "uvicorn>=0.30"]
solver = ["ortools>=9.10"]
dev = ["pytest>=8", "hypothesis>=6", "ruff>=0.5", "black>=24.8", "mypy>=1.10"]

[project.scripts]
eduschedule = "eduschedule.cli.main:app"